@@ -28,13 +28,13 @@ public class ExtWrapTagged extends ExternalizableWrapper {
 	
 	static {
 		WRAPPER_CODES = new HashMap<Class, Integer>();
-		WRAPPER_CODES.put(ExtWrapNullable.class, new Integer(0x00));
-		WRAPPER_CODES.put(ExtWrapList.class, new Integer(0x20));
-		WRAPPER_CODES.put(ExtWrapListPoly.class, new Integer(0x21));
-		WRAPPER_CODES.put(ExtWrapMap.class, new Integer(0x22));
-		WRAPPER_CODES.put(ExtWrapMapPoly.class, new Integer(0x23));
-		WRAPPER_CODES.put(ExtWrapIntEncodingUniform.class, new Integer(0x40));
-		WRAPPER_CODES.put(ExtWrapIntEncodingSmall.class, new Integer(0x41));
+		WRAPPER_CODES.put(ExtWrapNullable.class, Integer.valueOf(0x00));
+		WRAPPER_CODES.put(ExtWrapList.class, Integer.valueOf(0x20));
+		WRAPPER_CODES.put(ExtWrapListPoly.class, Integer.valueOf(0x21));
+		WRAPPER_CODES.put(ExtWrapMap.class, Integer.valueOf(0x22));
+		WRAPPER_CODES.put(ExtWrapMapPoly.class, Integer.valueOf(0x23));
+		WRAPPER_CODES.put(ExtWrapIntEncodingUniform.class, Integer.valueOf(0x40));
+		WRAPPER_CODES.put(ExtWrapIntEncodingSmall.class, Integer.valueOf(0x41));
 	}
 	
 	/* serialization */
